# spectre

./: README.md  fg_fdm_listener.py  fg_launch.bat  gru_model.pt  pyproject.toml  scaler.pkl
dashboard/: app.js  index.html  styles.css
scripts/: inject_drift.py  inject_spoof.py
spectre/: engine.py  fg_udp.py  pipeline.py  train.py
