[project]
name = "airbus-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "filterpy>=1.4.5",
    "flightgear-python>=2.0.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]
